--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,20 @@
 	text-decoration: line-through;
 	opacity: 0.5;
 }
+.error {
+	position: relative;
+	animation: shake .1s linear;
+	animation-iteration-count: 3;
+}
+
+@keyframes shake {
+	0% {
+		left: -5px;
+	}
+	100% {
+		right: -5px;
+	}
+}
 
 @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
